# morpheus

./: .clang-format  .clang-tidy  .gitignore  BUILD.md  CHANGELOG.md  CITATION.cff  CMakeLists.txt  README.md  main.cpp
benchmark/: CMakeLists.txt
benchmark/format_bench/: CMakeLists.txt
benchmark/format_bench/scripts/: build.sh  plots.py  process_output.sh  run.sh  submit.sh  submit_archer.pbs  submit_cirrus.slurm
benchmark/format_bench/src/: dynamic_selection.cpp
benchmark/performance/: CMakeLists.txt
benchmark/performance/scripts/: build.sh  parse_memdp.sh  parse_stalls.sh  plot_memdp.py  plot_stalls.py  plots.py  run.sh  submit.sh
benchmark/performance/src/: coo.cpp  csr.cpp  hyb.cpp
benchmark/spmv/: bench_spmv.sh  submit.pbs
benchmark/variant_active_back/: CMakeLists.txt
benchmark/variant_active_back/scripts/: archer_build_all.sh  archer_process_all.sh  archer_process_build_all.sh  archer_process_output_all.sh  archer_run_all.sh  build.sh  check_correctness.sh  cirrus_build_all.sh  cirrus_process_all.sh  cirrus_process_output_all.sh  cirrus_run_all.sh  plots.py  process_build.sh  run.sh  submit.sh
benchmark/variant_active_back/src/: dynamic.cpp  dynamic.hpp
benchmark/variant_active_front/: CMakeLists.txt
benchmark/variant_active_front/scripts/: archer_build_all.sh  archer_process_all.sh  archer_process_build_all.sh  archer_process_output_all.sh  archer_run_all.sh  build.sh  cirrus_build_all.sh  cirrus_process_all.sh  cirrus_process_build_all.sh  cirrus_run_all.sh  plots.py  process_output.sh  run.sh  submit.sh
benchmark/variant_active_front/src/: dynamic.cpp  dynamic.hpp  static.cpp
benchmark/variant_bench/: CMakeLists.txt
benchmark/variant_bench/scripts/: build.sh  (+9 more)
benchmarks/: CMakeLists.txt  convert.cpp  spmv-omp.cpp  spmv.cpp  timer.hpp
benchmarks/convert/: process.sh  run.sh  submit.sh
benchmarks/spmv/: plots.py  process.sh  run.sh  submit.sh
benchmarks/spmv-omp/: process.sh  run.sh  submit.sh
core/src/: CMakeLists.txt  Morpheus_AlgorithmTags.hpp  Morpheus_ContainerFactory.hpp  Morpheus_ContainerTraits.hpp  Morpheus_Convert.hpp  Morpheus_CooMatrix.hpp  Morpheus_Copy.hpp  Morpheus_Core.hpp  Morpheus_CsrMatrix.hpp  Morpheus_CustomBackend.hpp  Morpheus_DenseMatrix.hpp  Morpheus_DenseVector.hpp  Morpheus_DiaMatrix.hpp  Morpheus_Dot.hpp  Morpheus_DynamicMatrix.hpp  Morpheus_EllMatrix.hpp  Morpheus_Exceptions.hpp  Morpheus_FormatTags.hpp  Morpheus_FormatTraits.hpp  Morpheus_FormatsRegistry.hpp  Morpheus_GenericBackend.hpp  Morpheus_GenericSpace.hpp  Morpheus_HdcMatrix.hpp  Morpheus_HybMatrix.hpp  Morpheus_KokkosSpace.hpp  Morpheus_Macros.hpp  Morpheus_MatrixAnalytics.hpp  Morpheus_MatrixBase.hpp  Morpheus_MatrixMarket.hpp  Morpheus_MatrixOperations.hpp  Morpheus_MatrixOptions.hpp  Morpheus_Metaprogramming.hpp  Morpheus_MirrorContainers.hpp  Morpheus_Multiply.hpp  Morpheus_Print.hpp  Morpheus_Reduction.hpp  Morpheus_Scan.hpp  Morpheus_Sort.hpp  Morpheus_SpaceTraits.hpp  Morpheus_Spaces.hpp  (+6 more)
core/tests/: CMakeLists.txt  Macros.hpp  TestMain.cpp  TestUtils.hpp  Test_ContainerFactory.hpp  Test_ContainerTraits.hpp  Test_Convert.hpp  Test_Convert_Dynamic.hpp  Test_CooMatrix.hpp  Test_CooMatrix_Binary.hpp  Test_CooMatrix_CompatibleBinary.hpp  Test_CooMatrix_CompatibleDynamicBinary.hpp  Test_Copy.hpp  Test_CsrMatrix.hpp  Test_CsrMatrix_Binary.hpp  Test_CsrMatrix_CompatibleBinary.hpp  Test_CsrMatrix_CompatibleDynamicBinary.hpp  Test_CustomBackend.hpp  Test_DenseMatrix.hpp  Test_DenseMatrix_Binary.hpp  Test_DenseMatrix_CompatibleBinary.hpp  Test_DenseVector.hpp  Test_DenseVectorTraits.hpp  Test_DenseVector_Binary.hpp  Test_DenseVector_CompatibleBinary.hpp  Test_DiaMatrix.hpp  Test_DiaMatrix_Binary.hpp  Test_DiaMatrix_CompatibleBinary.hpp  Test_DiaMatrix_CompatibleDynamicBinary.hpp  Test_Dot.hpp  Test_DynamicMatrix.hpp  Test_DynamicMatrix_Binary.hpp  Test_DynamicMatrix_CompatibleBinary.hpp  Test_DynamicMatrix_CompatibleConcreteBinary.hpp  Test_EllMatrix.hpp  Test_EllMatrix_Binary.hpp  Test_EllMatrix_CompatibleBinary.hpp  Test_EllMatrix_CompatibleDynamicBinary.hpp  Test_FormatTags.hpp  Test_FormatTraits.hpp  (+29 more)
examples/: CMakeLists.txt  CooMatrix.cpp  Copy.cpp  CsrMatrix.cpp  DenseMatrix.cpp  DiaMatrix.cpp  DynamicCopy.cpp  convert.cpp  cusp_spmv.cpp  cusp_spmv_coo.cpp  dynamic_resize.cpp  dynamic_spmv.cpp  dynamic_spmv_coo.cpp  io.cpp  matrix_traits.cpp  morpheus_init.cpp  multiply.cpp  omp.cpp  sorting.cpp  static_spmv.cpp  static_spmv_coo.cpp  switch_interface.cpp  vector.cpp  vector_traits.cpp  version.cpp
examples/cusp/: coo.cpp  csr.cpp  dia.cpp  ell.cpp  hyb.cpp
examples/dynamic/: coo.cpp  csr.cpp  dia.cpp  ell.cpp  hyb.cpp
examples/include/: cusp.hpp  dynamic.hpp  parser.hpp  static.hpp  timer.hpp
examples/static/: coo.cpp  csr.cpp  dia.cpp  ell.cpp  hyb.cpp
morpheus/: CMakeLists.txt  apply_operation.hpp  apply_visitor.hpp  config.hpp  convert.hpp  coo_matrix.hpp  csr_matrix.hpp  dense_matrix.hpp  dense_vector.hpp  dynamic_matrix.hpp  format_selector.hpp  matrix.hpp  memory.hpp  morpheus.hpp  multiply.hpp  print.hpp  variant.hpp  version.hpp
morpheus/algorithms/: algorithms.hpp  convert.hpp  copy.hpp  multiply.hpp  print.hpp  sort.hpp
morpheus/containers/: containers.hpp  coo_matrix.hpp  csr_matrix.hpp  dense_matrix.hpp  dia_matrix.hpp  dynamic_matrix.hpp  vector.hpp
morpheus/core/: concepts.hpp  core.hpp  exceptions.hpp  macros.hpp  matrix_proxy.hpp  matrix_tags.hpp  matrix_traits.hpp  type_traits.hpp  vector_tags.hpp  vector_traits.hpp
morpheus/detail/: apply_operation.inl  apply_visitor.inl  convert.inl  matrix.inl  multiply.inl  print.inl
morpheus/dynamic/: apply_operation.hpp  binary_operation.hpp  convert.hpp  matrix.hpp  multiply.hpp  print.hpp
morpheus/dynamic_matrix/: apply_operation.hpp  apply_visitor.hpp  convert.hpp  matrix.hpp  multiply.hpp  print.hpp
morpheus/io/: binary.hpp  matrix_market.hpp
morpheus/matrix_formats/: convert.hpp  coo_matrix.hpp  csr_matrix.hpp  dense_matrix.hpp  dense_vector.hpp  dia_matrix.hpp  ell_matrix.hpp  hyb_matrix.hpp  multiply.hpp  print.hpp
morpheus/util/: parser.hpp  timer.hpp
(+1321 files in other folders)
